Database migration. Changed Map<Order, price> to List of orders, and set field "price" in the Order entity.