@@ -49,6 +49,7 @@
       <version>8.0.31</version>
     </dependency>
 
+
     <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter-api</artifactId>
@@ -135,56 +136,82 @@
 <!--    </dependency>-->
 
 
+<!--    <dependency>-->
+<!--      <groupId>org.flywaydb</groupId>-->
+<!--      <artifactId>flyway-core</artifactId>-->
+<!--      <version>9.14.1</version>-->
+<!--    </dependency>-->
 
+<!--    <dependency>-->
+<!--      <groupId>org.flywaydb</groupId>-->
+<!--      <artifactId>flyway-core</artifactId>-->
+<!--      <version>8.0.0</version>-->
+<!--    </dependency>-->
+
+    <dependency>
+      <groupId>org.flywaydb.enterprise</groupId>
+      <artifactId>flyway-mysql</artifactId>
+      <version>8.5.13</version>
+    </dependency>
 
   </dependencies>
 
   <build>
     <finalName>restaurant</finalName>
-    <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
-      <plugins>
-        <plugin>
-          <artifactId>maven-clean-plugin</artifactId>
-          <version>3.1.0</version>
-        </plugin>
-        <!-- see http://maven.apache.org/ref/current/maven-core/default-bindings.html#Plugin_bindings_for_war_packaging -->
-        <plugin>
-          <artifactId>maven-resources-plugin</artifactId>
-          <version>3.0.2</version>
-        </plugin>
-        <plugin>
-          <artifactId>maven-compiler-plugin</artifactId>
-          <version>3.8.0</version>
-        </plugin>
-        <plugin>
-          <artifactId>maven-surefire-plugin</artifactId>
-          <version>2.22.1</version>
-        </plugin>
-        <plugin>
-          <artifactId>maven-war-plugin</artifactId>
-          <version>3.2.2</version>
-        </plugin>
-        <plugin>
-          <artifactId>maven-install-plugin</artifactId>
-          <version>2.5.2</version>
-        </plugin>
-        <plugin>
-          <artifactId>maven-deploy-plugin</artifactId>
-          <version>2.8.2</version>
-        </plugin>
+<!--    <pluginManagement>&lt;!&ndash; lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) &ndash;&gt;-->
+<!--      <plugins>-->
+<!--        <plugin>-->
+<!--          <artifactId>maven-clean-plugin</artifactId>-->
+<!--          <version>3.1.0</version>-->
+<!--        </plugin>-->
+<!--        &lt;!&ndash; see http://maven.apache.org/ref/current/maven-core/default-bindings.html#Plugin_bindings_for_war_packaging &ndash;&gt;-->
+<!--        <plugin>-->
+<!--          <artifactId>maven-resources-plugin</artifactId>-->
+<!--          <version>3.0.2</version>-->
+<!--        </plugin>-->
+<!--        <plugin>-->
+<!--          <artifactId>maven-compiler-plugin</artifactId>-->
+<!--          <version>3.8.0</version>-->
+<!--        </plugin>-->
+<!--        <plugin>-->
+<!--          <artifactId>maven-surefire-plugin</artifactId>-->
+<!--          <version>2.22.1</version>-->
+<!--        </plugin>-->
+<!--        <plugin>-->
+<!--          <artifactId>maven-war-plugin</artifactId>-->
+<!--          <version>3.2.2</version>-->
+<!--        </plugin>-->
+<!--        <plugin>-->
+<!--          <artifactId>maven-install-plugin</artifactId>-->
+<!--          <version>2.5.2</version>-->
+<!--        </plugin>-->
+<!--        <plugin>-->
+<!--          <artifactId>maven-deploy-plugin</artifactId>-->
+<!--          <version>2.8.2</version>-->
+<!--        </plugin>-->
 
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-surefire-plugin</artifactId>
-          <configuration>
-            <argLine>
-              --add-opens java.base/java.lang=ALL-UNNAMED
-            </argLine>
-          </configuration>
-        </plugin>
+<!--&lt;!&ndash;        <plugin>&ndash;&gt;-->
+<!--          <groupId>org.apache.maven.plugins</groupId>-->
+<!--          <artifactId>maven-surefire-plugin</artifactId>-->
+<!--          <configuration>-->
+<!--            <argLine>-->
+<!--              &#45;&#45;add-opens java.base/java.lang=ALL-UNNAMED-->
+<!--            </argLine>-->
+<!--          </configuration>-->
+<!--        </plugin>-->
 
-      </plugins>
-    </pluginManagement>
+
+<!--      </plugins>-->
+<!--    </pluginManagement>-->
+
+    <plugins>
+      <plugin>
+        <groupId>org.flywaydb</groupId>
+        <artifactId>flyway-maven-plugin</artifactId>
+        <version>9.14.1</version>
+<!--        <version>9.14.1</version>-->
+      </plugin>
+    </plugins>
 
 <!--      <plugins>-->
 <!--          <plugin>-->
